// Copyright 2018 The Bazel Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package blaze;

// option java_api_version = 2;

option java_package = "com.google.devtools.intellij.aspect";

message ArtifactLocation {
  // The path of this file relative to its root. This excludes the
  // aforementioned root, i.e. configuration-specific fragments of the path.
  // This path is can be different to File.short_path.
  string relative_path = 2;

  // True if this is a source file, i.e. it is not generated.
  bool is_source = 3;

  // The root beneath which this file resides. Not equal to File.root.path,
  // normalizes relative paths and therefore also includes the bazel-bin
  // prefix for the artifact.
  string root_path = 4;

  // Whether this artifact comes from an external repository.
  bool is_external = 5;
}